--- a/library1/library1/Views/Home/Index.cshtml
+++ b/library1/library1/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <html lang="en">
 
 <head>
-    <title>BookSaw - Free Book Store HTML CSS Template</title>
+    <title>BookSaw - Book Store </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,28 +101,10 @@
                             <div class="main-menu stellarnav">
                                 <ul class="menu-list">
                                     <li class="menu-item active"><a href="#home">Home</a></li>
-                                    <li class="menu-item has-sub">
-                                        <a href="#pages" class="nav-link">Pages</a>
 
-                                        <ul>
-                                            <li class="active"><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="styles.html">Styles <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="blog.html">Blog <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="single-post.html">Post Single <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="shop.html">Our Store <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="single-product.html">Product Single <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="contact.html">Contact <span class="badge bg-dark">PRO</span></a></li>
-                                            <li><a href="thank-you.html">Thank You <span class="badge bg-dark">PRO</span></a></li>
-                                        </ul>
-
-                                    </li>
                                     <li class="menu-item"><a href="#featured-books" class="nav-link">Featured</a></li>
                                     <li class="menu-item"><a href="#popular-books" class="nav-link">Popular</a></li>
                                     <li class="menu-item"><a href="#special-offer" class="nav-link">Offer</a></li>
-                                    <li class="menu-item"><a href="#latest-blog" class="nav-link">Articles</a></li>
-                                    <li class="menu-item"><a href="#download-app" class="nav-link">Download App</a></li>
-                                    <li class="menu-item"><a href="https://templatesjungle.gumroad.com/l/booksaw-free-html-bookstore-template" class="nav-link btn btn-outline-dark rounded-pill m-0" target="_blank">Get PRO</a></li>
                                 </ul>
 
                                 <div class="hamburger">
@@ -235,7 +217,7 @@
                             <div class="col-md-3">
                                 <div class="product-item">
                                     <figure class="product-style">
-                                        <img src="images/product-item1.jpg" alt="Books" class="product-item">
+                                        <img src="~/templates/images/product-item1.jpg" alt="Books" class="product-item">
                                         <button type="button" class="add-to-cart" data-product-tile="add-to-cart">
                                             Add to
                                             Cart
@@ -951,210 +933,8 @@
         </div>
     </section>
 
-    <section id="subscribe">
-        <div class="container">
-            <div class="row justify-content-center">
-
-                <div class="col-md-8">
-                    <div class="row">
-
-                        <div class="col-md-6">
-
-                            <div class="title-element">
-                                <h2 class="section-title divider">Subscribe to our newsletter</h2>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">
-
-                            <div class="subscribe-content" data-aos="fade-up">
-                                <p>
-                                    Sed eu feugiat amet, libero ipsum enim pharetra hac dolor sit amet, consectetur. Elit
-                                    adipiscing enim pharetra hac.
-                                </p>
-                                <form id="form">
-                                    <input type="text" name="email" placeholder="Enter your email addresss here">
-                                    <button class="btn-subscribe">
-                                        <span>send</span>
-                                        <i class="icon icon-send"></i>
-                                    </button>
-                                </form>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section id="latest-blog" class="py-5 my-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <div class="section-header align-center">
-                        <div class="title">
-                            <span>Read our articles</span>
-                        </div>
-                        <h2 class="section-title">Latest Articles</h2>
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-md-4">
-
-                            <article class="column" data-aos="fade-up">
-
-                                <figure>
-                                    <a href="#" class="image-hvr-effect">
-                                        <img src="~/templates/images/post-img1.jpg" alt="post" class="post-image">
-                                    </a>
-                                </figure>
-
-                                <div class="post-item">
-                                    <div class="meta-date">Mar 30, 2021</div>
-                                    <h3><a href="#">Reading books always makes the moments happy</a></h3>
-
-                                    <div class="links-element">
-                                        <div class="categories">inspiration</div>
-                                        <div class="social-links">
-                                            <ul>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-facebook"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-twitter"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-behance-square"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div><!--links-element-->
-
-                                </div>
-                            </article>
-
-                        </div>
-                        <div class="col-md-4">
-
-                            <article class="column" data-aos="fade-up" data-aos-delay="200">
-                                <figure>
-                                    <a href="#" class="image-hvr-effect">
-                                        <img src="~/templates/images/post-img2.jpg" alt="post" class="post-image">
-                                    </a>
-                                </figure>
-                                <div class="post-item">
-                                    <div class="meta-date">Mar 29, 2021</div>
-                                    <h3><a href="#">Reading books always makes the moments happy</a></h3>
-
-                                    <div class="links-element">
-                                        <div class="categories">inspiration</div>
-                                        <div class="social-links">
-                                            <ul>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-facebook"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-twitter"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-behance-square"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div><!--links-element-->
-
-                                </div>
-                            </article>
-
-                        </div>
-                        <div class="col-md-4">
-
-                            <article class="column" data-aos="fade-up" data-aos-delay="400">
-                                <figure>
-                                    <a href="#" class="image-hvr-effect">
-                                        <img src="~/templates/images/post-img3.jpg" alt="post" class="post-image">
-                                    </a>
-                                </figure>
-                                <div class="post-item">
-                                    <div class="meta-date">Feb 27, 2021</div>
-                                    <h3><a href="#">Reading books always makes the moments happy</a></h3>
-
-                                    <div class="links-element">
-                                        <div class="categories">inspiration</div>
-                                        <div class="social-links">
-                                            <ul>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-facebook"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-twitter"></i></a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="icon icon-behance-square"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div><!--links-element-->
-
-                                </div>
-                            </article>
-
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-
-                        <div class="btn-wrap align-center">
-                            <a href="#" class="btn btn-outline-accent btn-accent-arrow" tabindex="0">
-                                Read All Articles<i class="icon icon-ns-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="download-app" class="leaf-pattern-overlay">
-        <div class="corner-pattern-overlay"></div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="row">
-
-                        <div class="col-md-5">
-                            <figure>
-                                <img src="~/templates/images/device.png" alt="phone" class="single-image">
-                            </figure>
-                        </div>
-
-                        <div class="col-md-7">
-                            <div class="app-info">
-                                <h2 class="section-title divider">Download our app now !</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus
-                                    liberolectus nonet psryroin. Amet sed lorem posuere sit iaculis amet, ac urna.
-                                    Adipiscing fames semper erat ac in suspendisse iaculis.
-                                </p>
-                                <div class="google-app">
-                                    <img src="~/templates/images/google-play.jpg" alt="google play">
-                                    <img src="~/templates/images/app-store.jpg" alt="app store">
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
+   
 
     <footer id="footer">
         <div class="container">
@@ -1313,12 +1093,12 @@
         </div>
     </div>
 
-    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="~/templates/js/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/script.js"></script>
+    <script src="~/templates/js/plugins.js"></script>
+    <script src="~/templates/js/script.js"></script>
 
 </body>
 
