--- a/library1/library1/Views/Home/Index.cshtml
+++ b/library1/library1/Views/Home/Index.cshtml
@@ -3,183 +3,9 @@
 }
 
 
-<!DOCTYPE html>
-<html lang="en">
+<!--header-wrap-->
 
-<head>
-    <title>BookSaw - Book Store </title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="~/templates/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="~/templates/icomoon/icomoon.css">
-    <link rel="stylesheet" type="text/css" href="~/templates/css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="~/templates/style.css">
-
-</head>
-
-<body data-bs-spy="scroll" data-bs-target="#header" tabindex="0">
-
-    <div id="header-wrap">
-
-        <div class="top-content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="social-links">
-                            <ul>
-                                <li>
-                                    <a href="#"><i class="icon icon-facebook"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="icon icon-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="icon icon-youtube-play"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="icon icon-behance-square"></i></a>
-                                </li>
-                            </ul>
-                        </div><!--social-links-->
-                    </div>
-                    <div class="col-md-6">
-                        <div class="right-element">
-                            <a href="#" class="user-account for-buy">
-                                <i class="icon icon-user"></i><span>Account</span>
-                            </a>
-                            <a href="#" class="cart for-buy">
-                                <i class="icon icon-clipboard"></i><span>
-                                    Cart:(0
-                                    $)
-                                </span>
-                            </a>
-
-                            <div class="action-menu">
-
-                                <div class="search-bar">
-                                    <a href="#" class="search-button search-toggle" data-selector="#header-wrap">
-                                        <i class="icon icon-search"></i>
-                                    </a>
-                                    <form role="search" method="get" class="search-box">
-                                        <input class="search-field text search-input" placeholder="Search"
-                                               type="search">
-                                    </form>
-                                </div>
-                            </div>
-
-                        </div><!--top-right-->
-                    </div>
-
-                </div>
-            </div>
-        </div><!--top-content-->
-
-        <header id="header">
-            <div class="container-fluid">
-                <div class="row">
-
-                    <div class="col-md-2">
-                        <div class="main-logo">
-                            <a href="index.html"><img src="~/templates/images/main-logo.png" alt="logo"></a>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-10">
-
-                        <nav id="navbar">
-                            <div class="main-menu stellarnav">
-                                <ul class="menu-list">
-                                    <li class="menu-item active"><a href="#home">Home</a></li>
-
-                                    <li class="menu-item"><a href="#featured-books" class="nav-link">Featured</a></li>
-                                    <li class="menu-item"><a href="#popular-books" class="nav-link">Popular</a></li>
-                                    <li class="menu-item"><a href="#special-offer" class="nav-link">Offer</a></li>
-                                </ul>
-
-                                <div class="hamburger">
-                                    <span class="bar"></span>
-                                    <span class="bar"></span>
-                                    <span class="bar"></span>
-                                </div>
-
-                            </div>
-                        </nav>
-
-                    </div>
-
-                </div>
-            </div>
-        </header>
-
-    </div><!--header-wrap-->
-
-    <section id="billboard">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <button class="prev slick-arrow">
-                        <i class="icon icon-arrow-left"></i>
-                    </button>
-
-                    <div class="main-slider pattern-overlay">
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Life of the Wild</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
-                                </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner1.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Birds gonna be Happy</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
-                                </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner2.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                    </div><!--slider-->
-
-                    <button class="next slick-arrow">
-                        <i class="icon icon-arrow-right"></i>
-                    </button>
-
-                </div>
-            </div>
-        </div>
-
-    </section>
+    
 
     <section id="client-holder" data-aos="fade-up">
         <div class="container">
@@ -1093,13 +919,4 @@
         </div>
     </div>
 
-    <script src="~/templates/js/jquery-1.11.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-            crossorigin="anonymous"></script>
-    <script src="~/templates/js/plugins.js"></script>
-    <script src="~/templates/js/script.js"></script>
-
-</body>
-
-</html>
+  
