--- a/library1/library1/Views/Home/Index.cshtml
+++ b/library1/library1/Views/Home/Index.cshtml
@@ -1,29 +1,30 @@
-﻿@{
+﻿@model IEnumerable<library1.Models.Category>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
+@*header-wrap*@
 
-<!--header-wrap-->
 
-    
 
-    <section id="client-holder" data-aos="fade-up">
-        <div class="container">
-            <div class="row">
-                <div class="inner-content">
-                    <div class="logo-wrap">
-                        <div class="grid">
-                            <a href="#"><img src="~/templates/images/client-image1.png" alt="client"></a>
-                            <a href="#"><img src="~/templates/images/client-image2.png" alt="client"></a>
-                            <a href="#"><img src="~/templates/images/client-image3.png" alt="client"></a>
-                            <a href="#"><img src="~/templates/images/client-image4.png" alt="client"></a>
-                            <a href="#"><img src="~/templates/images/client-image5.png" alt="client"></a>
-                        </div>
-                    </div><!--image-holder-->
-                </div>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+              <h2>Categories</h2>
+            <ul class="nav nav-pills justify-content-center">
+                @foreach (var categoryies in Model)
+                {
+                    <li class="nav-item">
+                           <a class="nav-link" href="@Url.Action("BooksByCategory", "Category", new { id = categoryies.CategoryID })"> @categoryies.CategoryName
+                            </a>
+                    </li>}
+            </ul>
         </div>
-    </section>
+
+        </div>
+    </div>
+
 
     <section id="featured-books" class="py-5 my-5">
         <div class="container">
@@ -759,164 +760,8 @@
         </div>
     </section>
 
-   
-   
 
-    <footer id="footer">
-        <div class="container">
-            <div class="row">
 
-                <div class="col-md-4">
 
-                    <div class="footer-item">
-                        <div class="company-brand">
-                            <img src="~/templates/images/main-logo.png" alt="logo" class="footer-logo">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus liberolectus
-                                nonet psryroin. Amet sed lorem posuere sit iaculis amet, ac urna. Adipiscing fames
-                                semper erat ac in suspendisse iaculis.
-                            </p>
-                        </div>
-                    </div>
 
-                </div>
 
-                <div class="col-md-2">
-
-                    <div class="footer-menu">
-                        <h5>About Us</h5>
-                        <ul class="menu-list">
-                            <li class="menu-item">
-                                <a href="#">vision</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">articles </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">careers</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">service terms</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">donate</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="col-md-2">
-
-                    <div class="footer-menu">
-                        <h5>Discover</h5>
-                        <ul class="menu-list">
-                            <li class="menu-item">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Books</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Authors</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Subjects</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Advanced Search</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="col-md-2">
-
-                    <div class="footer-menu">
-                        <h5>My account</h5>
-                        <ul class="menu-list">
-                            <li class="menu-item">
-                                <a href="#">Sign In</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">View Cart</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">My Wishtlist</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Track My Order</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="col-md-2">
-
-                    <div class="footer-menu">
-                        <h5>Help</h5>
-                        <ul class="menu-list">
-                            <li class="menu-item">
-                                <a href="#">Help center</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Report a problem</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Suggesting edits</a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Contact us</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
-            <!-- / row -->
-
-        </div>
-    </footer>
-
-    <div id="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <div class="copyright">
-                        <div class="row">
-
-                            <div class="col-md-6">
-                                <p>
-                                    © 2022 All rights reserved. Free HTML Template by <a href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a>
-                                </p>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="social-links align-right">
-                                    <ul>
-                                        <li>
-                                            <a href="#"><i class="icon icon-facebook"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="icon icon-twitter"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="icon icon-youtube-play"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="icon icon-behance-square"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div><!--grid-->
-
-                </div><!--footer-bottom-content-->
-            </div>
-        </div>
-    </div>
-
-  
