--- a/Bookshop/Bookshop/Views/Categories/BooksByCategory.cshtml
+++ b/Bookshop/Bookshop/Views/Categories/BooksByCategory.cshtml
@@ -9,24 +9,23 @@
     <div class="row">
         @foreach (var book in Model)
         {
-            <div class="col-md-3">
-                <div class="card">
-                    @if (book.image != null)
-                    {
-                        <img src="data:image/png;base64,@(Convert.ToBase64String(book.image))" class="card-img-top" alt="Book Image">
-                    }
-                    else
-                    {
-                        <img src="~/Content/Images/default-book.png" class="card-img-top" alt="Default Book Image">
-                    }
-                    <div class="card-body">
-                        <h5 class="card-title">@book.Title</h5>
-                        <p class="card-text">Author: @book.Author</p>
-                        <p class="card-text">Price: $@book.Price</p>
-                        <a href="@Url.Action("Details", "Books", new { id = book.BookID })" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-        }
+    <div class="col-md-3">
+        <div class="product-item">
+            <figure class="product-style">
+                <a href="@Url.Action("Details", "Books", new { id = book.BookID })" class="btn btn-primary">View Details</a>
+                <img src="@book.image" alt="Books" class="product-item">
+
+                <button type="button" class="add-to-cart" data-product-tile="add-to-cart">
+                    Add to
+                    Cart
+                </button>
+            </figure>
+            <figcaption>
+                <h3>@book.Title</h3>
+                <span>@book.Author</span>
+                <div class="item-price">@book.Price</div>
+            </figcaption>
+        </div>
+    </div>}
     </div>
 </div>
