--- a/Bookshop/Bookshop/Views/Books/Details.cshtml
+++ b/Bookshop/Bookshop/Views/Books/Details.cshtml
@@ -16,12 +16,12 @@
         <div class="book-info" style="flex: 2;">
             <p style="font-size: 1.2em;"><strong>الكاتب:</strong> @Model.Author</p>
             <p style="font-size: 1.2em;"><strong>الفئة:</strong> @Model.Category.CategoryName</p>
-            <p style="font-size: 1.2em; margin-top: 20px;"><strong>الوصف:</strong></p>
+            <p style="font-size: 1.2em; margin-top: 20px;"><strong>الوصف:</strong>@Model.Description</p>
             <p style="line-height: 1.6;">هنا يمكنك إضافة وصف الكتاب، يتضمن نبذة عن القصة أو المحتوى، المعلومات الهامة التي قد تهم القارئ.</p>
 
             <!-- إضافة زر إذا كنت تريد دمج عمليات أخرى -->
             <div style="margin-top: 30px;">
-                <a href="#" class="btn-add-to-cart" style="padding: 10px 15px; background-color: #28a745; color: #fff; text-decoration: none; border: none; border-radius: 5px;">إضافة إلى السلة</a>
+                <a href="#" class="btn-add-to-cart" style="padding: 10px 15px; background-color:#6b4f34 ; color: #f0f0f0; text-decoration: none; border: none; border-radius: 5px; ">إضافة إلى السلة</a>
             </div>
         </div>
     </div>
